<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stepit_driver</name>
  <version>0.0.0</version>
  <description>
    StepIt Hardware Interface
  </description>
  <maintainer email="g.remigi@kineticsystem.org">Giovanni Remigi</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cobs_serial</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <!--
  When you include the following linter dependencies and run tests on your ROS2
  package (typically with colcon test), these linters will check your codebase
  for any violations of coding standards and best practices.
  You only need to add ament_lint_auto_find_test_dependencies() to your test
  CMakeLists.txt.
  -->

  <!-- Check code against style conventions using clang-format. -->
  <test_depend>ament_clang_format</test_depend>
  <!-- Check code against style conventions using clang-tidy. -->
  <test_depend>ament_clang_tidy</test_depend>
  <!-- Check that every source file contains copyright reference. -->
  <test_depend>ament_cmake_copyright</test_depend>
  <!-- Lint CMake code using cmakelint. -->
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <!--
  Provides automation functions that make it easier to use the ament linters
  within a CMake environment.
  -->
  <test_depend>ament_lint_auto</test_depend>
  <!--
  This is a collection of commonly-used linters in the ament build system when
  working with CMake.
  -->
  <test_depend>ament_lint_common</test_depend>

  <!-- Support for gtest and gmock-based tests in the ament buildsystem in CMake. -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
